5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1642_2449.log
== TEST (2019-04-15 15:16:12) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))
d=float(input("valor de d: "))
e=float(input("valor de e: "))
f=float(input("valor de f: "))

if ((a*e/d*b)==(c/f)):
	print("Nao tem solucao")
else:
	x=((c*e)-(b*f))/((a*e)-(b*d))
	y=((a*f)-(c*d))/((a*e)-(bd))
	print(x, y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:13) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))
d=float(input("valor de d: "))
e=float(input("valor de e: "))
f=float(input("valor de f: "))

if ((a*e/d*b)==(c/f)):
	print("Nao tem solucao")
else:
	x=((c*e)-(b*f))/((a*e)-(b*d))
	
	y=((a*f)-(c*d))/((a*e)-(bd))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:57) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))
d=float(input("valor de d: "))
e=float(input("valor de e: "))
f=float(input("valor de f: "))

if ((a*e/d*b)==(c/f)):
	print("Nao tem solucao")
else:
	x=((c*e)-(b*f))/((a*e)-(b*d))
	
	y=((a*f)-(c*d))/((a*e)-(b*d))
	
	print(x, y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:18:07) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))
d=float(input("valor de d: "))
e=float(input("valor de e: "))
f=float(input("valor de f: "))

if ((a*e/d*b)==(c/f)):
	print("Nao tem solucao")
else:
	x=((c*e)-(b*f))/((a*e)-(b*d))
	
	y=((a*f)-(c*d))/((a*e)-(b*d))
	
	print(x, y)
-- EXECUTION TIME:
0.196593
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 11, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:54) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))
d=float(input("valor de d: "))
e=float(input("valor de e: "))
f=float(input("valor de f: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
	
if ((a*e/d*b)==(c/f)):
	print("Nao tem solucao")
else:
	
	print(x, y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:19:01) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))
d=float(input("valor de d: "))
e=float(input("valor de e: "))
f=float(input("valor de f: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
	
if ((a*e/d*b)==(c/f)):
	print("Nao tem solucao")
else:
	
	print(x, y)
-- EXECUTION TIME:
0.182258
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 8, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:19:25) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))
d=float(input("valor de d: "))
e=float(input("valor de e: "))
f=float(input("valor de f: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
	
if ((a*e/d*b)==(c/f)):
	print("Nao tem solucao")
else:
	
	print(x)
	print(y)
-- EXECUTION TIME:
0.148588
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 8, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:31) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))
d=float(input("valor de d: "))
e=float(input("valor de e: "))
f=float(input("valor de f: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
	
if ((a*e/d*b)==(c/f)):
	print("Nao tem solucao")
else:
	
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:20:27) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))
d=float(input("valor de d: "))
e=float(input("valor de e: "))
f=float(input("valor de f: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
	
if ((a*e/d*b)==(c/f)):
	
	print("Nao tem solucao")
	
else:
	
	print(x)
	print(y)
-- EXECUTION TIME:
0.137644
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 8, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:21:48) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))
d=float(input("valor de d: "))
e=float(input("valor de e: "))
f=float(input("valor de f: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))
	
p1=(a*e/d*b)
p2=(c/f)

if (p1 == p2):
	
	print("Nao tem solucao")
	
else:
	
	print(x)
	print(y)
-- EXECUTION TIME:
0.227586
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 8, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:15) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))
d=float(input("valor de d: "))
e=float(input("valor de e: "))
f=float(input("valor de f: "))

p1=(a*e/d*b)
p2=(c/f)

if (p1 != p2):
	
	print(x)
	print(y)	
	
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:28:02) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))
d=float(input("valor de d: "))
e=float(input("valor de e: "))
f=float(input("valor de f: "))

p1=(a*e/d*b)
p2=(c/f)

if (p1 != p2):
	
	x=((c*e)-(b*f))/((a*e)-(b*d))
	y=((a*f)-(c*d))/((a*e)-(b*d))	
	print(x)
	print(y)	
	
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:28:09) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))
d=float(input("valor de d: "))
e=float(input("valor de e: "))
f=float(input("valor de f: "))

p1=(a*e/d*b)
p2=(c/f)

if (p1 != p2):
	
	x=((c*e)-(b*f))/((a*e)-(b*d))
	y=((a*f)-(c*d))/((a*e)-(b*d))	
	print(x)
	print(y)	
	
else:
	print("Nao tem solucao")
	
-- EXECUTION TIME:
0.206457
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 13, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:28:15) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))
d=float(input("valor de d: "))
e=float(input("valor de e: "))
f=float(input("valor de f: "))

p1=(a*e/d*b)
p2=(c/f)

if (p1 != p2):
	
	x=((c*e)-(b*f))/((a*e)-(b*d))
	y=((a*f)-(c*d))/((a*e)-(b*d))	
	print(x)
	print(y)	
	
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:31:41) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))
d=float(input("valor de d: "))
e=float(input("valor de e: "))
f=float(input("valor de f: "))

p1=(a/d)
p2=(b/e)

if (p1 != p2):
	
	x=((c*e)-(b*f))/((a*e)-(b*d))
	y=((a*f)-(c*d))/((a*e)-(b*d))	
	print(x)
	print(y)	
	
else:
	print("Nao tem solucao")
	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:31:50) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))
d=float(input("valor de d: "))
e=float(input("valor de e: "))
f=float(input("valor de f: "))

p1=(a/d)
p2=(b/e)

if (p1 != p2):
	
	x=((c*e)-(b*f))/((a*e)-(b*d))
	y=((a*f)-(c*d))/((a*e)-(b*d))	
	print(x)
	print(y)	
	
else:
	print("Nao tem solucao")
	
-- EXECUTION TIME:
0.197234
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
